# MoonLight

./: .editorconfig  .gitignore  CREDITS  INSTALL  LICENSE  README.md  meson.build  meson_options.txt  todo  uninstall-theme.sh
debian/: .gitignore  changelog  control
gtk/: meson.build
icons/: meson.build
meson/: install_edj.sh  install_gtk.sh  install_icons.sh  is_root.sh
src/MokshaMoonlight/: MokshaMoonlight.edc  build.sh  color_class.edc  macros.edc  meson.build
src/MokshaMoonlight/edc/: about-theme.edc  about.edc  battery.edc  border.edc  button.edc  check.edc  clock.edc  colorwell.edc  comp.edc  conf.edc  cslider.edc  desklock.edc  deskpreview.edc  dialog.edc  edgebindings.edc  efm_toolbar.edc  engage.edc  entry.edc  everything.edc  fileman.edc  fontpreview.edc  frame.edc  gadman.edc  ibaribox.edc  ilist.edc  init.edc  label.edc  mem.edc  menu.edc  mixer.edc  mokshapreview.edc  music_control.edc  notification.edc  packagekit.edc  pager.edc  pointer.edc  preview.edc  radio.edc  randr.edc  scrollframe.edc  (+16 more)
src/MokshaMoonlight/elm/: access.edc  actionslider.edc  bg.edc  border.edc  bubble.edc  button.edc  calendar.edc  check.edc  clock.edc  colorsel.edc  conform.edc  ctxpopup.edc  datetime.edc  dayselector.edc  diskselector.edc  entry.edc  epulse_playbacks.edc  fileselector.edc  flipselector.edc  focus.edc  frame.edc  gengrid.edc  genlist.edc  hover.edc  icon.edc  index.edc  inwin.edc  label.edc  layout.edc  list.edc  map.edc  menu.edc  multibuttonentry.edc  naviframe.edc  notify.edc  panel.edc  panes.edc  photo.edc  photocam.edc  player.edc  (+15 more)
src/MokshaMoonlight/scrap/: music_control.edc
